Privacy Policy completed

--- a/src/app/shared/components/login-info-base/privacy-policy/privacy-policy.component.html
+++ b/src/app/shared/components/login-info-base/privacy-policy/privacy-policy.component.html
@@ -244,8 +244,8 @@
 
     <h3>Right to lodge a complaint with the competent supervisory authority</h3>
     <p>
-      In the event of violations of the GDPR, data subjects have the right
-      to lodge a complaint with a supervisory authority, in particular in the
+      In the event of violations of the GDPR, data subjects have the right to
+      lodge a complaint with a supervisory authority, in particular in the
       Member State of their habitual residence, their place of work or the place
       of the alleged violation. This right to lodge a complaint exists without
       prejudice to other administrative or judicial remedies.
@@ -325,5 +325,32 @@
 
     <h2>4. Data collection on this website</h2>
     <p>Inquiry by e-mail, telephone, or fax</p>
+    <p>
+      If you contact us by e-mail, telephone, or fax, your inquiry, including
+      all resulting personal data (name, inquiry), will be stored and processed
+      by us for the purpose of handling your request. We will not share this
+      data without your consent.
+    </p>
+    <p>
+      The processing of this data is based on Art. 6 para. 1 lit. b GDPR,
+      provided your inquiry is related to the fulfillment of a contract or is
+      necessary for the implementation of pre-contractual measures. In all other
+      cases, the processing is based on our legitimate interest in the effective
+      processing of inquiries addressed to us (Art. 6 para. 1 lit. f GDPR) or on
+      your consent (Art. 6 para. 1 lit. a GDPR) if this has been requested; the
+      consent is revocable at any time.
+    </p>
+    <p>
+      The data you send to us via contact inquiries will remain with us until
+      you request deletion, revoke your consent to storage, or the purpose for
+      data storage no longer applies (e.g., after your request has been
+      processed). Mandatory legal provisions &ndash; in particular legal
+      retention periods &ndash; remain unaffected.
+    </p>
+    <p>
+      Source:<br />
+      <a href="https://www.e-recht24.de">https://www.e-recht24.de</a><br />
+      Translation to English by Google.
+    </p>
   </div>
 </div>
