footer svg dynamic color based on url

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -38,6 +38,11 @@ footer {
     color: $copy-light;
   }
 
+  a {
+    color: $copy-light;
+    text-decoration: none;
+  }
+
   &:hover svg path {
     stroke: $copy-light !important;
   }
