--- a/src/app/settings/components/settings-base/settings-base.component.scss
+++ b/src/app/settings/components/settings-base/settings-base.component.scss
@@ -15,6 +15,18 @@ section {
   transform: translateX(100%);
   transition: transform 750ms ease-in-out;
   overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $scrollbar-background;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-color, $standard-accent);
+  }
 }
 
 .headline {
