account settings / delete account / settings button with icon component

--- a/src/app/settings/components/settings-base/settings-base.component.scss
+++ b/src/app/settings/components/settings-base/settings-base.component.scss
@@ -21,7 +21,7 @@ section {
   }
 
   &::-webkit-scrollbar-track {
-    background: $scrollbar-background;
+    background-color: $settings-background;
   }
 
   &::-webkit-scrollbar-thumb {
