--- a/src/app/settings/components/settings-general/settings-general.component.scss
+++ b/src/app/settings/components/settings-general/settings-general.component.scss
@@ -47,3 +47,9 @@ section {
     }
   }
 }
+
+.logout-delete-wrapper {
+  @include dFlex($jc: space-between);
+  flex: 1;
+  flex-direction: column;
+}
