--- a/src/app/shared/components/buttons/settings-button-with-icon/settings-button-with-icon.component.html
+++ b/src/app/shared/components/buttons/settings-button-with-icon/settings-button-with-icon.component.html
@@ -7,10 +7,10 @@
   }"
   [ngClass]="{
     primary: style === 'primary',
-    secondary: style === 'secondary',
-    dark: style === 'dark'
+    secondary: style === 'secondary'
   }"
   (click)="submit()"
 >
+  <img [src]="imgPath" alt="icon" />
   {{ content }}
 </button>
