timer component text transitions

--- a/src/app/home/components/sequence-complete/sequence-complete.component.html
+++ b/src/app/home/components/sequence-complete/sequence-complete.component.html
@@ -1,4 +1,8 @@
-<section>
+<section
+  [ngClass]="{
+    'fade-in': fadeIn
+  }"
+>
   <div class="left">
     <h2>What do you want to do now?</h2>
 
