--- a/src/app/home/components/sequence-complete/sequence-complete.component.scss
+++ b/src/app/home/components/sequence-complete/sequence-complete.component.scss
@@ -7,6 +7,8 @@ section {
   width: 700px;
   padding: 24px 48px;
   border-radius: 24px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .left {
@@ -48,4 +50,8 @@ a {
   &:hover {
     filter: brightness(1.2);
   }
+}
+
+.fade-in {
+  opacity: 1 !important;
 }
