--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
@@ -8,8 +8,10 @@ section {
   padding: 24px 48px;
   border-radius: 24px;
 
+  transition: max-height 500ms ease-in-out;
+
   width: 700px;
-  max-height: 409px;
+  max-height: 542px;
 
   .sequence-box {
     @include dFlex($gp: 8px, $jc: flex-start);
@@ -66,6 +68,10 @@ section {
       }
     }
   }
+}
+
+.fow-seq-fin {
+  max-height: 409px;
 }
 
 .pointer {
