premium user in settings / 5 custom sequences for standard users 15 for premium

--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
@@ -6,6 +6,9 @@
       flowSequenceService.minutesRemaining < 1 &&
       flowSequenceService.secondsOfMinuteRemainung <= 1
   }"
+  [ngStyle]="{
+    '--scrollbar-color': settingsService.appSettings.theme.accentColor
+  }"
   (click)="$event.stopPropagation()"
 >
   <div class="sequence-box">
