login responsive / scroll to login section in header

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="right">
+  <div class="right" #loginSection>
     <h1>Sign in</h1>
     <div>
       <span class="px-15">Continue with Google</span>
