--- a/src/app/shared/components/login-info-base/login-info-base.component.scss
+++ b/src/app/shared/components/login-info-base/login-info-base.component.scss
@@ -18,3 +18,23 @@ section {
   @include dFlex();
   flex-grow: 1;
 }
+
+.gradient-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 33vh;
+  height: 33svh;
+  pointer-events: none;
+}
+
+.gradient-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 33vh;
+  height: 33svh;
+  pointer-events: none;
+}
