--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -6,6 +6,14 @@
   @include glassStyle();
   padding: 80px;
   border-radius: 24px;
+
+  @media (max-width: 1000px) {
+    max-width: 90vw;
+    max-width: 90svw;
+    flex-direction: column;
+    padding: 36px;
+    gap: 36px;
+  }
 }
 
 .left {
@@ -14,9 +22,19 @@
   max-width: 400px;
   color: $copy-light;
 
+  @media (max-width: 1000px) {
+    gap: 16px;
+  }
+
   .top {
     @include dFlex($gp: 16px);
     flex-direction: column;
+
+    img {
+      @media (max-width: 1000px) {
+        display: none;
+      }
+    }
 
     h2 {
       font-size: 24px;
@@ -45,6 +63,10 @@
   flex-direction: column;
   width: 400px;
   color: $copy-light;
+
+  @media (max-width: 1000px) {
+    width: 100%;
+  }
 
   h1 {
     font-size: 28px;
