timer / media controls / dequence-details responseive + scroll step in to view function

--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="bottom-container">
-    <svg
+    <!-- <svg
       width="22"
       height="22"
       viewBox="0 0 22 22"
@@ -60,7 +60,7 @@
         stroke-linecap="round"
         stroke-linejoin="round"
       />
-    </svg>
+    </svg> -->
 
     <div class="progress-container">
       @for (step of flowSequence.steps ; track $index) { @if (step.type ===
@@ -117,7 +117,7 @@
         alt=""
       />
 
-      <svg
+      <!-- <svg
         width="38"
         height="38"
         viewBox="0 0 44 44"
@@ -136,7 +136,7 @@
           stroke-linecap="round"
           stroke-linejoin="round"
         />
-      </svg>
+      </svg> -->
     </div>
   </div>
   @if (preview) {
