--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
@@ -13,12 +13,30 @@ section {
   width: 700px;
   max-height: 542px;
 
+  @media (max-width: 1200px) {
+    width: 500px;
+  }
+
+  @media (max-width: 1000px) {
+    width: 400px;
+    padding: 12px;
+  }
+
+  @media (max-width: 400px) {
+    width: 90vw;
+    width: 90svw;
+  }
+
   .sequence-box {
     @include dFlex($gp: 8px, $jc: flex-start);
     flex-direction: column;
     max-height: 432px;
     overflow-y: auto;
     width: 100%;
+
+    @media (max-width: 1000px) {
+      max-height: 90px;
+    }
 
     &::-webkit-scrollbar {
       width: 8px;
