--- a/src/app/home/components/timer/timer.component.scss
+++ b/src/app/home/components/timer/timer.component.scss
@@ -13,6 +13,18 @@ section {
   width: 400px;
   height: 550px;
 
+  @media (max-width: 1000px) {
+    height: auto;
+    padding: 16px;
+  }
+
+  @media (max-width: 400px) {
+    height: auto;
+    width: 90vw;
+    width: 90svw;
+    padding: 16px;
+  }
+
   p {
     color: $copy-light;
     font-size: 24px;
@@ -54,6 +66,10 @@ section {
   width: 100%;
   height: 236px;
 
+  @media (max-width: 1000px) {
+    height: 100px; // check on other stages
+  }
+
   > span {
     position: absolute;
     opacity: 0;
@@ -64,12 +80,20 @@ section {
     color: $copy-light;
     font-size: 256px;
     font-weight: 300;
+
+    @media (max-width: 1000px) {
+      font-size: 120px;
+    }
   }
 
   .push {
     color: $copy-light;
     font-size: 65px;
     font-weight: 300;
+
+    @media (max-width: 1000px) {
+      font-size: 58px;
+    }
   }
 
   .gratulation {
