sequence complete responsive + height animation

--- a/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.scss
+++ b/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.scss
@@ -52,5 +52,9 @@ main {
   .right {
     @include dFlex($gp: 12px);
     flex-direction: column;
+
+    @media (max-width: 1000px) {
+      flex-direction: column-reverse;
+    }
   }
 }
