--- a/src/app/home/components/sequence-complete/sequence-complete.component.scss
+++ b/src/app/home/components/sequence-complete/sequence-complete.component.scss
@@ -8,13 +8,34 @@ section {
   padding: 24px 48px;
   border-radius: 24px;
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  max-height: 0;
+  overflow: hidden;
+  transition: opacity 500ms ease-in-out, max-height 500ms ease-in-out;
+
+  @media (max-width: 1200px) {
+    width: 500px;
+  }
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    gap: 12px;
+    width: 400px;
+  }
+
+  @media (max-width: 400px) {
+    width: 90vw;
+    width: 90svw;
+  }
 }
 
 .left {
   @include dFlex($gp: 12px);
   flex-direction: column;
   width: 50%;
+
+  @media (max-width: 1000px) {
+    width: 100%;
+  }
 
   h2 {
     color: $copy-light;
@@ -28,6 +49,10 @@ section {
   @include dFlex($gp: 12px);
   flex-direction: column;
   width: 50%;
+
+  @media (max-width: 1000px) {
+    width: 100%;
+  }
 }
 
 button,
@@ -54,4 +79,5 @@ a {
 
 .fade-in {
   opacity: 1 !important;
+  max-height: 600px !important;
 }
