gradient mixin / privacy responsive / tos responsive

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -134,7 +134,7 @@
   </div>
   }@else if (loginPage) {
 
-  <div class="right-wrapper">
+  <div class="right-wrapper hide-on-desktop">
     <a (click)="appNavService.triggerScroll()" class="scroll-to-login-button"
       >Login</a
     >
