--- a/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.scss
+++ b/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.scss
@@ -19,21 +19,11 @@ main {
 }
 
 .gradient-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 33vh;
-  height: 33svh;
+  @include gradient(top);
 }
 
 .gradient-bottom {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 33vh;
-  height: 33svh;
+  @include gradient(bottom);
 }
 
 .timer-active {
