--- a/src/app/shared/components/login-info-base/login-info-base.component.scss
+++ b/src/app/shared/components/login-info-base/login-info-base.component.scss
@@ -21,21 +21,9 @@ section {
 }
 
 .gradient-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 33vh;
-  height: 33svh;
-  pointer-events: none;
+  @include gradient(top);
 }
 
 .gradient-bottom {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 33vh;
-  height: 33svh;
-  pointer-events: none;
+  @include gradient(bottom);
 }
