--- a/src/app/shared/components/login-info-base/terms-conditions/terms-conditions.component.scss
+++ b/src/app/shared/components/login-info-base/terms-conditions/terms-conditions.component.scss
@@ -5,6 +5,14 @@
   @include glassStyle();
   padding: 80px;
   border-radius: 24px;
+
+  @media (max-width: 900px) {
+    border-radius: unset;
+    border-radius: 12px;
+    max-width: 90vw;
+    max-width: 90svw;
+    padding: 36px;
+  }
 }
 
 .content-wrapper {
@@ -14,6 +22,12 @@
   max-height: 500px;
   padding-right: 16px;
   overflow: auto;
+
+  @media (max-width: 900px) {
+    max-width: unset;
+    max-height: unset;
+    padding: 0;
+  }
 
   &::-webkit-scrollbar {
     width: 8px;
@@ -34,6 +48,10 @@ h1 {
   color: $copy-light;
   font-size: 32px;
   font-weight: 600;
+
+  @media (max-width: 900px) {
+    font-size: 24px;
+  }
 }
 
 h2 {
