--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -11,3 +11,12 @@
   align-items: $ai;
   gap: $gp;
 }
+
+@mixin gradient($position) {
+  position: absolute;
+  #{$position}: 0;
+  left: 0;
+  right: 0;
+  height: 33vh;
+  height: 33svh;
+}
