general-settings responsive

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -10,6 +10,8 @@
     <h2>Settings</h2>
   </div>
 
+  <div class="close-button" (click)="closeOverlay()">X</div>
+
   <nav>
     <div
       (click)="settingsService.activeTab = 'account'"
