--- a/src/app/settings/components/settings-general/settings-general.component.scss
+++ b/src/app/settings/components/settings-general/settings-general.component.scss
@@ -29,21 +29,27 @@ section {
   flex-direction: column;
   width: 100%;
 
-  > div {
-    @include dFlex($ai: flex-start, $gp: 36px);
+  @media (max-width: 900px) {
+    max-width: 280px;
+  }
 
-    span {
-      font-size: 16px;
-      color: $copy-light;
-      width: 130px;
+  > div {
+    display: grid;
+    grid-template-columns: 106px minmax(0, 1fr);
+    gap: 36px;
+    max-width: 100%;
+
+    @media (max-width: 900px) {
+      gap: 8px;
     }
 
-    input {
-      background: unset;
-      border: unset;
-      outline: none;
-      color: $copy-light;
+    span {
+      display: block;
       font-size: 16px;
+      color: $copy-light;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      white-space: normal;
     }
   }
 }
@@ -52,4 +58,8 @@ section {
   @include dFlex($jc: space-between);
   flex: 1;
   flex-direction: column;
+
+  @media (max-width: 900px) {
+    gap: 16px;
+  }
 }
