--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
@@ -6,6 +6,10 @@ section {
   flex-direction: column;
   width: 100%;
   flex-grow: 1;
+
+  @media (max-width: 900px) {
+    max-width: 280px;
+  }
 }
 
 .saved-custom-timers-headline {
@@ -30,6 +34,10 @@ section {
   span {
     font-size: 24px;
     color: $copy-light;
+
+    @media (max-width: 900px) {
+      font-size: 20px;
+    }
   }
 }
 
@@ -37,6 +45,10 @@ section {
   @include dFlex($ai: flex-start, $gp: 8px);
   flex-direction: column;
   width: 100%;
+
+  // @media (max-width: 900px) {
+  //   align-items: center;
+  // }
 
   > div {
     @include dFlex($gp: 8px);
@@ -55,6 +67,12 @@ section {
 .timer-info {
   @include dFlex($jc: space-between, $ai: flex-start);
   width: 100%;
+
+  @media (max-width: 900px) {
+    max-width: 280px;
+    flex-direction: column;
+    gap: 8px;
+  }
 
   span {
     font-size: 16px;
@@ -77,6 +95,11 @@ section {
       color: $copy-dark;
       border-radius: 4px;
       border: none;
+
+      @media (max-width: 900px) {
+        width: 280px;
+        flex-direction: column;
+      }
     }
 
     textarea {
@@ -103,6 +126,29 @@ section {
   border-radius: 4px;
   padding: 12px;
   width: 100%;
+
+  @media (max-width: 900px) {
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: unset;
+    border-radius: unset;
+    padding: 0;
+    gap: 4px;
+
+    > :first-child {
+      background-color: $settings-background-light;
+      width: 100%;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 8px;
+      border-radius: 4px;
+    }
+
+    > :last-child {
+      width: 100%;
+      justify-content: flex-end;
+    }
+  }
 
   > div {
     @include dFlex($gp: 20px);
@@ -147,6 +193,10 @@ section {
   @include dFlex($jc: space-between, $ai: flex-start);
   width: 100%;
 
+  @media (max-width: 900px) {
+    flex-direction: column-reverse;
+  }
+
   .left {
     @include dFlex($gp: 16px, $ai: flex-start);
     flex-direction: column;
@@ -188,6 +238,10 @@ section {
   border-radius: 4px;
   overflow: hidden;
 
+  @media (max-width: 900px) {
+    width: 280px;
+  }
+
   .img-container {
     padding: 8px;
     cursor: pointer;
@@ -199,6 +253,10 @@ section {
 
     img {
       cursor: pointer;
+
+      // @media (max-width: 900px) {
+      //   display: none;
+      // }
     }
 
     > div {
@@ -224,6 +282,10 @@ section {
     .name-input {
       width: 300px;
       background-color: rgb(242, 227, 234);
+
+      @media (max-width: 900px) {
+        width: 120px;
+      }
     }
 
     .time-input {
