fixed background images fixed positioning on safari browser

--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -1,9 +1,11 @@
-<div
-  class="wrapper"
-  [style.background-image]="
-    'url(' + settingsService.appSettings.theme.backgroundImage + ')'
-  "
->
+<div class="wrapper">
+  <div
+    class="background-fixed"
+    [style.background-image]="
+      'url(' + settingsService.appSettings.theme.backgroundImage + ')'
+    "
+  ></div>
+
   <div
     [ngStyle]="{
       background:
