--- a/src/app/home/components/welcome/welcome.component.scss
+++ b/src/app/home/components/welcome/welcome.component.scss
@@ -2,15 +2,16 @@
 @import "./../../../../styles.scss";
 
 .wrapper {
-  background-size: cover;
-  background-position: center;
   min-width: 100vw;
   min-width: 100svw;
   min-height: 100vh;
   min-height: 100svh;
   display: flex;
   flex-direction: column;
-  background-attachment: fixed;
+}
+
+.background-fixed {
+  @include background-fixed();
 }
 
 main {
