--- a/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.html
+++ b/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.html
@@ -1,30 +1,33 @@
-<div
-  class="wrapper"
-  [style.background-image]="
-    'url(' + settingsService.appSettings.theme.backgroundImage + ')'
-  "
->
+<div class="wrapper">
+  <div
+    class="background-fixed"
+    [style.background-image]="
+      'url(' + settingsService.appSettings.theme.backgroundImage + ')'
+    "
+  ></div>
+
+  <div
+    [ngStyle]="{
+      background:
+        'linear-gradient(180deg,' +
+        settingsService.appSettings.theme.gradientColor +
+        ', rgba(12, 23, 19, 0) 100%)'
+    }"
+    class="gradient-top"
+  ></div>
+  <div
+    [ngStyle]="{
+      background:
+        'linear-gradient(0deg,' +
+        settingsService.appSettings.theme.gradientColor +
+        ', rgba(12, 23, 19, 0) 100%)'
+    }"
+    class="gradient-bottom"
+  ></div>
+
   <app-header></app-header>
 
   <main>
-    <div
-      [ngStyle]="{
-        background:
-          'linear-gradient(180deg,' +
-          settingsService.appSettings.theme.gradientColor +
-          ', rgba(12, 23, 19, 0) 100%)'
-      }"
-      class="gradient-top"
-    ></div>
-    <div
-      [ngStyle]="{
-        background:
-          'linear-gradient(0deg,' +
-          settingsService.appSettings.theme.gradientColor +
-          ', rgba(12, 23, 19, 0) 100%)'
-      }"
-      class="gradient-bottom"
-    ></div>
     @if (flowSequenceService.currentStep) {
     <div class="timer-active">
       <div class="left">
