--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -20,3 +20,15 @@
   height: 33vh;
   height: 33svh;
 }
+
+@mixin background-fixed() {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
