code cleanup removed commented-out code

--- a/src/app/home/components/timer/timer.component.scss
+++ b/src/app/home/components/timer/timer.component.scss
@@ -67,7 +67,7 @@ section {
   height: 236px;
 
   @media (max-width: 1000px) {
-    height: 100px; // check on other stages
+    height: 100px;
   }
 
   > span {
