--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -21,10 +21,11 @@
       <span>Show timer in browser tab</span>
     </div>
 
-    <div>
+    <!-- TODO: Uncomment once Google Calendar integration is available on the backend. -->
+    <!-- <div>
       <img src="assets\img\icons\checkbox-checked.svg" alt="checkbox" />
       <span>Save completed flow sequences in your Google Calendar</span>
-    </div>
+    </div> -->
   </div>
 
   <div class="saved-custom-timers-headline">
