confirm delete account overlay / fav icon

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -1,8 +1,15 @@
 <section
   [ngClass]="{ 'start-animation': startAnimation }"
-  [ngStyle]="{
-    '--scrollbar-color': settingsService.appSettings.theme.accentColor
-  }"
+  [ngStyle]="
+    settingsService.confirmDeleteAccountOpen
+      ? {
+          '--scrollbar-color': settingsService.appSettings.theme.accentColor,
+          overflow: 'hidden'
+        }
+      : {
+          '--scrollbar-color': settingsService.appSettings.theme.accentColor
+        }
+  "
   (click)="$event.stopPropagation()"
 >
   <div class="headline">
