--- a/src/app/settings/components/settings-general/settings-general.component.html
+++ b/src/app/settings/components/settings-general/settings-general.component.html
@@ -56,7 +56,7 @@
       [fontSize]="15"
       [fontWeight]="500"
       [style]="'dark'"
-      (submitEvent)="deleteAccount()"
+      (submitEvent)="openConfirmDelete()"
     ></app-simple-settings-button>
     }
   </div>
